--- a/src/app/components/onboarding/onboarding.component.html
+++ b/src/app/components/onboarding/onboarding.component.html
@@ -1,7 +1,7 @@
 <div class="w-full h-full">
     <div class="grid grid-cols-1 lg:grid-cols-2">
         <div class="p-20">
-            <h1 class="text-start text-white text-4xl font-bold">Logo</h1>
+            <h1 class="text-start text-white text-4xl font-bold">Izuba Clinic</h1>
             <div class="mt-20 space-y-4">
                 <p class="text-white font-[700] text-[36px] leading-[44px]">Hi there, ....</p>
                 <p class="text-[#ABB8C4] text-[18px] font-[500] leading-[28px]">Get Started with Appointments.</p>
