Creating router protect and add another validate on appointment fields

--- a/src/app/components/onboarding/onboarding.component.html
+++ b/src/app/components/onboarding/onboarding.component.html
@@ -48,7 +48,7 @@
                       </div>
                 </div>
                 <div class="mt-10">
-                    <button type="submit" class="text-white text-[16px] leading-[24px] font-[600] bg-[#24AE7C] w-full h-[48px] rounded-[8px]">Get Started</button>
+                    <button type="submit" [disabled]="registerForm.invalid" class="text-white text-[16px] leading-[24px] font-[600] bg-[#2b8f6a] hover:bg-[#24AE7C] w-full h-[48px] rounded-[8px]">Get Started</button>
                 </div>
             </form>
         </div>
