--- a/src/app/components/appointment-form/appointment-form.component.html
+++ b/src/app/components/appointment-form/appointment-form.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="mt-4">
             <form [formGroup]="appointmentForm" (ngSubmit)="appointment()" class="w-full" >
-                
+
                 <div class="mt-8">
                     <label for="fullname" class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Doctor</label>
                     <div class="relative">
@@ -17,12 +17,18 @@
                               {{ doctor.label }}
                             </option>
                           </select>
+                          <div *ngIf="appointmentForm.get('doctors')?.touched && appointmentForm.get('doctors')?.invalid" class="text-red-500 text-sm mt-1">
+                            <small class="text-red-600" *ngIf="appointmentForm.get('doctors')?.hasError('required')">Choose Doctor name is required</small>
+                        </div>
                     </div>
                 </div>
                 <div class="flex flex-col lg:flex-row gap-4">
                     <div class="flex-1 mt-4">
                         <label  class="text-[#ABB8C4] block mb-2 text-[14px]  font-medium leading-[20px]">Reason for appointment </label> 
                             <input type="text" placeholder="ex: Annual montly check-up" class="w-full h-[96px] px-5 py-3 rounded-lg text-white bg-[#1A1D21] border-[#363A3D] border-[1px] focus:outline-none" required formControlName="reasonAppointment" />
+                            <div *ngIf="appointmentForm.get('reasonAppointment')?.touched && appointmentForm.get('reasonAppointment')?.invalid" class="text-red-500 text-sm mt-1">
+                                <small class="text-red-600" *ngIf="appointmentForm.get('reasonAppointment')?.hasError('required')">Reason Appointment is required</small>
+                            </div>
                     </div>
                 
                     <div class="flex-1 mt-4">
@@ -37,10 +43,13 @@
                             <img src='/calendar.svg' class="w-5 h-5 text-gray-400" alt="phone icon">
                         </div>
                         <input type="date" placeholder="Select you birth date" class="w-full pl-10 px-5 py-3 rounded-lg text-white bg-[#1A1D21] border-[#363A3D] border-[1px] focus:outline-none " required formControlName="date" />
+                        <div *ngIf="appointmentForm.get('date')?.touched && appointmentForm.get('date')?.invalid" class="text-red-500 text-sm mt-1">
+                            <small class="text-red-600" *ngIf="appointmentForm.get('date')?.hasError('required')">Date is required</small>
+                        </div>
                     </div>
                 </div>
                 <div class="mt-10">
-                    <button type="submit" class="w-full px-10 py-3 text-white font-medium tracking-widest text-center rounded-lg bg-[#2b8f6a] hover:bg-[#24AE7C] focus:outline-none">Submit and continue</button> 
+                    <button type="submit" [disabled]="appointmentForm.invalid" class="w-full px-10 py-3 text-white font-medium tracking-widest text-center rounded-lg bg-[#2b8f6a] hover:bg-[#24AE7C] focus:outline-none">Submit and continue</button> 
                 </div>
             </form>
         </div>
