change label name

--- a/src/app/components/onboarding/onboarding.component.html
+++ b/src/app/components/onboarding/onboarding.component.html
@@ -22,7 +22,7 @@
                       </div>
                 </div>
                 <div class="mt-4">
-                    <label for="fullname" class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Email address</label>
+                    <label for="email" class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Email address</label>
                     <div class="relative">
                         <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                             <img src='/email.svg' class="w-5 h-5 text-gray-400" alt="user icon">
@@ -35,7 +35,7 @@
                       </div>
                 </div>
                 <div class="mt-4">
-                    <label for="fullname" class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Phone number</label>
+                    <label for="phone" class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Phone number</label>
                     <div class="relative">
                         <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                             <img src='/Phone.svg' class="w-5 h-5 text-gray-400" alt="user icon">
