--- a/src/app/components/patient-form/patient-form.component.html
+++ b/src/app/components/patient-form/patient-form.component.html
@@ -69,7 +69,7 @@
             
              <div class="flex-1 mt-4 ">
                 
-                <label  class="text-[#ABB8C4] block mb-6 text-[14px] font-medium leading-[20px]">Insurance policy number</label>
+                <label  class="text-[#ABB8C4] block mb-6 text-[14px] font-medium leading-[20px]">Gender</label>
                 <div class="relative">
                     <mat-radio-group aria-label="Select an option" class="space-x-28" formControlName="gender">
                         <mat-radio-button value="male" class="border-dashed border-2 p-4 w-[117px] border-[#363A3D] h-[48px] text-[#CDCECF] rounded-[5px] font-[500] text-[16px] leading-[24px]">Male</mat-radio-button>
@@ -201,7 +201,7 @@
        <h1 class="text-white text-[30px] font-[700] leading-[36px]">Identification and Verfication</h1>
     </div>
     <div class="mt-4">
-        <label for="fullname" class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Primary care physician</label>
+        <label class="text-[#ABB8C4] block mb-2 text-[14px] font-medium leading-[20px]">Primary care physician</label>
         <div class="relative">
             <select   class="w-full  px-5 py-3 rounded-lg text-white bg-[#1A1D21] border-[#363A3D] border-[1px] focus:outline-none" formControlName="birthCertificate" >
                 <option value="" disabled selected>Birth Certificate</option>
